--- a/php/package.json
+++ b/php/package.json
@@ -7,6 +7,7 @@
   "author": "mjarkk",
   "license": "MIT",
   "dependencies": {
+    "fs-extra": "^5.0.0",
     "gulp": "^3.9.1",
     "gulp-data": "^1.3.1",
     "gulp-stylus": "^2.7.0"
