--- a/php/package.json
+++ b/php/package.json
@@ -7,9 +7,19 @@
   "author": "mjarkk",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^16.1.0",
+    "express": "^4.16.2",
     "fs-extra": "^5.0.0",
     "gulp": "^3.9.1",
+    "gulp-connect": "^5.2.0",
     "gulp-data": "^1.3.1",
-    "gulp-stylus": "^2.7.0"
+    "gulp-stylus": "^2.7.0",
+    "gulp-watch": "^5.0.0",
+    "underscore": "^1.8.3",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
