--- a/php/package.json
+++ b/php/package.json
@@ -12,6 +12,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.1.0",
+    "chokidar": "^2.0.1",
     "express": "^4.16.2",
     "fs-extra": "^5.0.0",
     "gulp": "^3.9.1",
